# distrubuted-architecture-exam

./: .env.example  .gitignore  Dockerfile  EXAM.md  README.md  STUDENT_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/: init.sql
docs/: api_examples.md  architecture.md  concept-A.md  concept-B.md  concept_card_template.md  project-overview.md
docs/concepts/: concept-C.md
flight_service/: __init__.py  db.py  main.py  schemas.py
hotel_service/: __init__.py  db.py  main.py  schemas.py
notification_api/: __init__.py  db.py  main.py
notification_worker/: __init__.py  db.py  worker.py
payment_service/: __init__.py  db.py  main.py  schemas.py
scripts/: common.py  demo_a1_database_constraints.py  demo_a2_pessimistic_locking.py  demo_duplicate_notification.py  demo_duplicate_request.py  demo_idempotency_key.py  demo_overbooking.py  demo_partial_failure.py  demo_saga_compensation.py  print_state.py  reset_all.py  smoke_success.py
shared/: __init__.py  faults.py  logging.py  rabbitmq.py
tests/: conftest.py  test_intentional_flaws.py  test_smoke.py
trip_service/: __init__.py  clients.py  db.py  events.py  main.py  pricing.py  schemas.py
