[project]
name = "trip-booking-exam-starter"
version = "0.1.0"
description = "Intentionally naive distributed trip-booking starter app for a Distributed Systems exam."
requires-python = ">=3.12,<3.13"
dependencies = [
    "aio-pika==9.4.3",
    "asyncpg==0.29.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "pydantic==2.7.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.0",
    "uvicorn[standard]==0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
